--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -273,7 +273,7 @@
                 {{ form.probably_culex }}
             </div>
             <div data-id="{{ form.instance.version_UUID }}" class="sure_albopictus {{form.instance.type}}" style="">
-                <label>Sure albopictus</label>
+                <label>Definitely albopictus</label>
                 {{ form.sure_albopictus }}
             </div>
             <div data-id="{{ form.instance.version_UUID }}" class="not_sure {{form.instance.type}}" style="">
