Changed v for style sheet

--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{% static 'tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'tigacrafting/bootstrap-select/css/bootstrap-select.min.css' %}">
     <link rel="stylesheet" href="{% static 'tigacrafting/font-awesome-4.2.0/css/font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'tigacrafting/tigacrafting_style.css' %}">
+    <link rel="stylesheet" href="{% static 'tigacrafting/tigacrafting_style.css' %}?v=1">
     <link rel="stylesheet" href="{% static 'tigacrafting/jquery-ui-1.12.1.custom/jquery-ui.min.css' %}">
     <style>
         .grid-item { background-color: grey; height: 120px; width: 120px; float: left; margin-top: 5px;margin-bottom: 5px;}
