--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -861,6 +861,7 @@
     <input id="version_uuid_input" type="text" name="version_uuid" style="display: none;"
            value="{{ version_uuid }}">
     <input id="linked_id_input" type="text" name="linked_id" style="display: none;" value="{{ linked_id }}">
+    <input id="ns_id_input" type="text" name="ns_id" style="display: none;" value="{{ ns_exec }}">
     <input id="load_new_reports_input" type="text" name="load_new_reports" style="display: none;"
            value="{{ load_new_reports }}">
     <input id="tasks_per_page_input" type="text" name="tasks_per_page" style="display: none;"
@@ -1054,6 +1055,19 @@
                                     </select>
                                 </div>
                             </div>
+                            {% if request.user.userstat.is_superexpert %}
+                            <div class="form-group">
+                                <label for="ns_select" class="col-sm-4 control-label">Exec validated by NS:</label>
+                                <div class="col-sm-8">
+                                    <select id="ns_select" class="selectpicker show-tick form-control" data-live-search="true">
+                                        <option value=""></option>
+                                        {% for ns in ns_list %}
+                                            <option value="{{ ns.id }}">{{ ns.userstat.national_supervisor_of.name_engl }} - {{ ns.username }}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                            {% endif %}
                             <!--<div class="form-group">
                                 <label for="status_select" class="col-sm-4 control-label">Tags:</label>
                                 <div class="col-sm-8">
@@ -1985,6 +1999,7 @@
             $("#final_status_input").val('na');
             $("#version_uuid_input").val('na');
             $("#linked_id_input").val('na');
+            $("#ns_id_input").val('all');
             $("#tags_filter_input").val('');
             $("#load_new_reports_input").val('F');
         }
@@ -2202,16 +2217,19 @@
                 var this_tiger_certainty = $("#tiger_certainty_select").val();
                 var this_site_certainty = $("#site_certainty_select").val();
                 var this_status = $("#status_select").val();
+                var this_ns_exec = $("#ns_select").val();
                 $("#orderby_input").val(this_orderby);
                 $("#tiger_certainty_input").val(this_tiger_certainty);
                 $("#site_certainty_input").val(this_site_certainty);
                 $("#status_input").val(this_status);
+                $("#ns_id_input").val(this_ns_exec);
                 $("#pending_input").val(pending);
                 var qp = '?orderby=' + this_orderby;
                 qp += '&tiger_certainty=' + this_tiger_certainty;
                 qp += '&site_certainty=' + this_site_certainty;
                 qp += '&status=' + this_status;
                 qp += '&pending=' + pending;
+                qp += '&ns_exec=' + this_ns_exec;
                 return(qp)
             }
 
@@ -2232,6 +2250,7 @@
 
             $("#orderby_select").val("{{ orderby }}");
             $("#tiger_certainty_select").val("{{ tiger_certainty }}");
+            $("#ns_select").val("{{ ns_exec }}");
             $("#site_certainty_select").val("{{ site_certainty }}");
             $("#status_select").val("{{ status }}");
             var pending_btn = $("#pending_btn"), complete_btn = $("#complete_btn");
