--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -10,7 +10,7 @@
 
     {% if version_uuid != 'na' and version_uuid != '' or linked_id != 'na' and linked_id != '' or tags_filter != 'na' and tags_filter != '' %}{% else %}
     <strong>Ordered by:</strong> {{ orderby }}<br>
-    <strong>Filters:</strong> Species classification - {{ tiger_certainty_label }}, Status - {{ status }}
+    <strong>Filters:</strong> Species classification - {{ tiger_certainty_label }}, Status - {{ status }}, Exec validated by - {{ exec_validated_label }}
     {% endif %}
 {% endblock %}
 
@@ -244,6 +244,7 @@
 
         $("#orderby_select").val("{{ orderby }}");
         $("#tiger_certainty_select").val("{{ tiger_certainty }}");
+        $("#ns_select").val("{{ ns_exec }}");
         $("#site_certainty_select").val("{{ site_certainty }}");
         $("#status_select").val("{{ status }}");
 
@@ -288,6 +289,7 @@
             var this_site_certainty = $("#site_certainty_select").val();
             var this_status = $("#status_select").val();
             var filter_tags = $("#tags_filter").tagit("assignedTags");
+            var this_ns_exec = $("#ns_select").val();
             var str_tags = '';
             if(filter_tags){
                 str_tags = filter_tags.join(",");
@@ -295,6 +297,7 @@
             $("#orderby_input").val(this_orderby);
             $("#tiger_certainty_input").val(this_tiger_certainty);
             $("#site_certainty_input").val(this_site_certainty);
+            $("#ns_id_input").val(this_ns_exec);
             $("#status_input").val(this_status);
             $("#pending_input").val(pending);
             $("#tags_filter_input").val(str_tags);
@@ -304,6 +307,7 @@
             qp += '&tags_filter=' + str_tags;
             qp += '&status=' + this_status;
             qp += '&pending=' + pending;
+            qp += '&ns_exec=' + this_ns_exec;
 
             if (flagged_btn.hasClass("active")) {
                 $("#final_status_input").val("flagged");
