--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -555,7 +555,7 @@
 
                     {% if request.user.userstat.is_national_supervisor and form.instance.is_on_ns_executive_validation_period %}
                     <div class="form-group">
-                        <label>Executive validation:</label>
+                        <label>National Supervisor validation:</label>
                         <div class="controls field-vc_executive" data-toggle="tooltip" title="" data-placement="top" data-original-title="Available only to national supervisor. Causes the report to be completely validated, with the final classification decided by the national supervisor.">
                             <input class="exec_val_input" type="checkbox" name="vc_executive_{{ form.instance.id }}" id="vc_executive_{{ form.instance.id }}">
                         </div>
