Cleaned some weird qs usage in entolab, changed crisis for emergency

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -333,7 +333,7 @@
         </div>
         {% if user.userstat.can_activate_crisis_mode %}
         <div id="crisis_status" class="row {% if user.userstat.crisis_mode %}crisis-on{% else %}crisis-off{% endif %}">
-            <h3>Crisis mode is
+            <h3>Emergency mode is
                 {% if user.userstat.crisis_mode %}
                     <span>ON</span>
                 {% else %}
